--- a/toyota/src/styles/Navbar.css
+++ b/toyota/src/styles/Navbar.css
@@ -183,21 +183,29 @@
 /* Cars Grid */
 .mega-menu-content {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+  top: 100%;
+  left: 0;
+  grid-template-columns: repeat(4, 1fr);
   gap: 20px;
-  width: 90%;
+  background: white;
+  width: 100vw;
+  padding: 10px;
   text-align: center;
+  z-index: 1000;
+  
 }
 
 .car-card {
   background: #f8f8f8;
   padding: 15px;
+  display: block;
   border-radius: 5px;
   transition: transform 0.3s ease-in-out;
 }
 
 .car-card img {
-  width: 100px;
+  width: 100%;
+  max-width: 180px;
   height: auto;
 }
 
@@ -208,5 +216,10 @@
 
 .car-card:hover {
   transform: scale(1.05);
+}
+.card-card:hover p{
+  text-decoration: underline;
+  text-decoration-color:red ;
+  
 }
 
