--- a/toyota/src/styles/Navbar.css
+++ b/toyota/src/styles/Navbar.css
@@ -2,7 +2,7 @@
   background-color: white;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   position: fixed;
-  width: 100%;
+  width: 100vw;
   top: 0;
   left: 0;
   z-index: 1000;
@@ -10,6 +10,7 @@
   display: flex;
   align-items: center;
   padding: 15px 40px;
+  box-sizing: border-box;
 }
 
 .nav-logo img {
@@ -37,7 +38,7 @@
   color: black;
   padding: 10px 0;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 12px;
   position: relative;
   transition: color 0.3s ease-in-out;
   display: inline-block;
@@ -53,6 +54,8 @@
   transition: width 0.3s ease-in-out;
   position: absolute;
   left: 0;
+  left: 50%;
+  transform: translateX(-50%);
   bottom: -5px;
 }
 
@@ -75,6 +78,7 @@
   text-transform: uppercase;
   padding: 10px 0;
   cursor: pointer;
+  align-items: center;
 }
 
 .dropdown-content {
@@ -84,11 +88,27 @@
   background: white;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
   padding: 10px 0;
-  width: 200px;
-  display: none;
+  width: 250px;
+  min-height: 100px;
+  max-height: 400px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: flex-start;
   border-radius: 3px;
   z-index: 1000;
+  overflow: visible;
 }
+.dropdown-content img {
+  width: 100%;
+  height: auto; 
+  object-fit: cover; 
+  max-height: 150px;
+  max-width: 100%;
+  object-fit: cover;
+  margin: 0 auto;
+}
+
 
 .dropdown:hover .dropdown-content {
   display: flex;
@@ -135,7 +155,8 @@
 .mega-menu {
   position: absolute;
   top: 100%;
-  left: 0;
+  left: auto;
+  
   width: 100vw;
   background: white;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
@@ -172,13 +193,23 @@
   background: white;
   width: 100%;
   padding: 10px;
+  max-width: 100vw;
+overflow-y: visible;
+left: -50px;
+transform: translateX(-8%);
+  max-height: none;
+  position: relative;
+  margin-left: -50px;
   text-align: center;
+  
+
 }
 
 .car-card {
   background: #f8f8f8;
   padding: 15px;
   display: block;
+
   border-radius: 5px;
   transition: transform 0.3s ease-in-out;
 }
@@ -186,13 +217,20 @@
 .car-card img {
   width: 100%;
   height: auto;
-  object-fit: cover;
+  max-height: 100%;
+  display: block;
+  object-fit: contain;
 }
 
 .car-card p {
   font-weight: bold;
+  font-size: 14px;
   display: inline-block;
   margin-top: 10px;
+  text-align: center;
+  position: relative;
+  text-transform: capitalize;
+  padding-bottom: 5px;
 }
 
 .car-card:hover {
@@ -212,13 +250,12 @@
 .car-card p::after {
   content: "";
   position: absolute;
-  left: 0;
-  
-  
+  left: 50%;
+transform: translateX(-50%);
   width: 0; 
   height: 2px;
-
   transition: width 0.3s ease-in-out; 
+  bottom: -3px;
 }
 
 .car-card:hover p::after {
